--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"> Navegador não é compativel</iframe>
 
         </section>
         <section id="redesociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg"></a>
+
+
 
         </section>
     </main>
